--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
+    <!-- <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/assets/landing/bg1.webp"
+      type="image/webp"
+    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Col Brown School</title>
     <!-- Google Tag Manager -->
